Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.8.0-beta2
-
None
-
4.8 commit cc118a16e69df7ee7edac08d239197fb9a6efca9, Windows 7, 64bit
-
bd9c2f04c00dfb6b80a28c70281f618f9650c0d9 (qt-creator/qt-creator/4.8)
Description
I have a crash with something like:
void func() { if (condition) {} // Place the cursor inside the braces and press Enter }
This function is the last in that file, and I'm using tabs for indentation.
I couldn't find a minimal way to reproduce, but in my project it's consistent.
Trace:
. 0 Id: 1758.2c80 Suspend: 1 Teb: 000007ff`fffde000 Unfrozen Child-SP RetAddr Call Site 00000000`0029a300 000007fe`d078f3c9 Qt5Gui!QTextLine::naturalTextRect+0x21 00000000`0029a340 000007fe`d078f0f9 Qt5Widgets!QPlainTextEdit::ensureCursorVisible+0x3e9 00000000`0029a4b0 000007fe`d078f022 Qt5Widgets!QPlainTextEdit::ensureCursorVisible+0x119 00000000`0029a520 000007fe`d07bce8b Qt5Widgets!QPlainTextEdit::ensureCursorVisible+0x42 00000000`0029a550 000007fe`a729cfc9 Qt5Widgets!QWidgetTextControl::setTextCursor+0x9b 00000000`0029a590 000007fe`a72a5c3c TextEditor4!TextEditor::TextEditorWidget::doSetTextCursor(class QTextCursor * cursor = 0x00000000`0bedc600, bool keepBlockSelection = true)+0xe9 [f:\projects\qt-creator\qt-creator\src\plugins\texteditor\texteditor.cpp @ 2860] 00000000`0029a5f0 000007fe`a5b63d29 TextEditor4!TextEditor::TextEditorWidget::keyPressEvent(class QKeyEvent * e = 0x00000000`208ca3c0)+0x67c [f:\projects\qt-creator\qt-creator\src\plugins\texteditor\texteditor.cpp @ 2496] 00000000`0029a6c0 000007fe`d062bd52 CppEditor4!CppEditor::Internal::CppEditorWidget::keyPressEvent(class QKeyEvent * e = 0x00000000`0029bab0)+0xa9 [f:\projects\qt-creator\qt-creator\src\plugins\cppeditor\cppeditorwidget.cpp @ 937] 00000000`0029a750 000007fe`d06ceb57 Qt5Widgets!QWidget::event+0x1d2 00000000`0029a930 000007fe`d06d027f Qt5Widgets!QFrame::event+0x37 00000000`0029a960 000007fe`d0608ca0 Qt5Widgets!QAbstractScrollArea::event+0x49f 00000000`0029aa10 000007fe`d0606490 Qt5Widgets!QApplicationPrivate::notify_helper+0x140 00000000`0029aa40 000007fe`bfd2ea59 Qt5Widgets!QApplication::notify+0x4c0 00000000`0029b170 000007fe`d0653769 Qt5Core!QCoreApplication::notifyInternal2+0xb9 00000000`0029b1f0 000007fe`d0651fa1 Qt5Widgets!QSizePolicy::QSizePolicy+0x2239 00000000`0029b220 000007fe`d0608ca0 Qt5Widgets!QSizePolicy::QSizePolicy+0xa71 00000000`0029b280 000007fe`d0607b27 Qt5Widgets!QApplicationPrivate::notify_helper+0x140 00000000`0029b2b0 000007fe`bfd2ea59 Qt5Widgets!QApplication::notify+0x1b57 00000000`0029b9e0 000007fe`d001d8af Qt5Core!QCoreApplication::notifyInternal2+0xb9 00000000`0029ba60 000007fe`d0004c4b Qt5Gui!QGuiApplicationPrivate::processKeyEvent+0xff 1 Id: 1758.3b04 Suspend: 1 Teb: 000007ff`fffdc000 Unfrozen Child-SP RetAddr Call Site 00000000`02a5f7b8 00000000`773d332d ntdll!NtWaitForMultipleObjects+0xa *** ERROR: Symbol file could not be found. Defaulted to export symbols for C:\Windows\system32\kernel32.dll - 00000000`02a5f7c0 00000000`771b59cd ntdll!RtlIsCriticalSectionLockedByThread+0xd4d 00000000`02a5fa60 00000000`7741385d kernel32!BaseThreadInitThunk+0xd 00000000`02a5fa90 00000000`00000000 ntdll!RtlUserThreadStart+0x1d 2 Id: 1758.2e28 Suspend: 1 Teb: 000007ff`fffda000 Unfrozen Child-SP RetAddr Call Site 00000000`03d0f9d8 00000000`774b96e4 ntdll!ZwWaitForWorkViaWorkerFactory+0xa 00000000`03d0f9e0 00000000`771b59cd ntdll!DbgUiRemoteBreakin+0x354 00000000`03d0fc70 00000000`7741385d kernel32!BaseThreadInitThunk+0xd 00000000`03d0fca0 00000000`00000000 ntdll!RtlUserThreadStart+0x1d 3 Id: 1758.3a0c Suspend: 1 Teb: 000007ff`fffd8000 Unfrozen Child-SP RetAddr Call Site 00000000`03e4fcf8 000007fe`fd101430 ntdll!NtWaitForMultipleObjects+0xa 00000000`03e4fd00 00000000`771b06c0 KERNELBASE!GetCurrentProcess+0x40 00000000`03e4fe00 000007fe`bfba8b66 kernel32!WaitForMultipleObjects+0xb0 00000000`03e4fe90 00000000`771b59cd Qt5Core!QThread::msleep+0x326 00000000`03e4ff30 00000000`7741385d kernel32!BaseThreadInitThunk+0xd 00000000`03e4ff60 00000000`00000000 ntdll!RtlUserThreadStart+0x1d 4 Id: 1758.3120 Suspend: 1 Teb: 000007ff`fffd6000 Unfrozen Child-SP RetAddr Call Site 00000000`03fdc368 000007fe`fd101430 ntdll!NtWaitForMultipleObjects+0xa 00000000`03fdc370 00000000`771c16e3 KERNELBASE!GetCurrentProcess+0x40 *** ERROR: Symbol file could not be found. Defaulted to export symbols for C:\Windows\system32\USER32.dll - 00000000`03fdc470 00000000`772d8f8d kernel32!WaitForMultipleObjectsEx+0xb3 00000000`03fdc500 00000000`772d6272 USER32!GetScrollBarInfo+0x1dd 00000000`03fdc5a0 000007fe`bfd77efa USER32!MsgWaitForMultipleObjectsEx+0x2e 00000000`03fdc5e0 000007fe`bfd2a923 Qt5Core!QEventDispatcherWin32::processEvents+0x5ba 00000000`03fdf760 000007fe`bfb9eff2 Qt5Core!QEventLoop::exec+0x1b3 00000000`03fdf7e0 000007fe`bfba973d Qt5Core!QThread::exec+0x92 00000000`03fdf830 00000000`771b59cd Qt5Core!QThread::start+0x39d 00000000`03fdf870 00000000`7741385d kernel32!BaseThreadInitThunk+0xd 00000000`03fdf8a0 00000000`00000000 ntdll!RtlUserThreadStart+0x1d 5 Id: 1758.19bc Suspend: 1 Teb: 000007ff`fffae000 Unfrozen Child-SP RetAddr Call Site 00000000`0417c848 000007fe`fd101430 ntdll!NtWaitForMultipleObjects+0xa 00000000`0417c850 00000000`771c16e3 KERNELBASE!GetCurrentProcess+0x40 00000000`0417c950 00000000`772d8f8d kernel32!WaitForMultipleObjectsEx+0xb3 00000000`0417c9e0 00000000`772d6272 USER32!GetScrollBarInfo+0x1dd 00000000`0417ca80 000007fe`bfd77efa USER32!MsgWaitForMultipleObjectsEx+0x2e 00000000`0417cac0 000007fe`bfd2a923 Qt5Core!QEventDispatcherWin32::processEvents+0x5ba 00000000`0417fc40 000007fe`bfb9eff2 Qt5Core!QEventLoop::exec+0x1b3 00000000`0417fcc0 000007fe`bfba973d Qt5Core!QThread::exec+0x92 00000000`0417fd10 00000000`771b59cd Qt5Core!QThread::start+0x39d 00000000`0417fd50 00000000`7741385d kernel32!BaseThreadInitThunk+0xd 00000000`0417fd80 00000000`00000000 ntdll!RtlUserThreadStart+0x1d 6 Id: 1758.151c Suspend: 1 Teb: 000007ff`fffac000 Unfrozen Child-SP RetAddr Call Site 00000000`042efac8 000007fe`fd1010ac ntdll!ZwWaitForSingleObject+0xa 00000000`042efad0 000007fe`bfbaa1bb KERNELBASE!WaitForSingleObjectEx+0x9c 00000000`042efb70 000007fe`bfba10f4 Qt5Core!QWaitCondition::wait+0x9b 00000000`042efbc0 000007fe`bfba973d Qt5Core!QThreadPoolPrivate::reset+0x444 00000000`042efc50 00000000`771b59cd Qt5Core!QThread::start+0x39d 00000000`042efc90 00000000`7741385d kernel32!BaseThreadInitThunk+0xd 00000000`042efcc0 00000000`00000000 ntdll!RtlUserThreadStart+0x1d 7 Id: 1758.3bf4 Suspend: 1 Teb: 000007ff`fffaa000 Unfrozen Child-SP RetAddr Call Site 00000000`080ff6f8 000007fe`fd101430 ntdll!NtWaitForMultipleObjects+0xa 00000000`080ff700 00000000`771b06c0 KERNELBASE!GetCurrentProcess+0x40 00000000`080ff800 000007fe`bfcdd3f7 kernel32!WaitForMultipleObjects+0xb0 00000000`080ff890 000007fe`bfba973d Qt5Core!QXmlStreamStringRef::~QXmlStreamStringRef+0x3f67 00000000`080ff9d0 00000000`771b59cd Qt5Core!QThread::start+0x39d 00000000`080ffa10 00000000`7741385d kernel32!BaseThreadInitThunk+0xd 00000000`080ffa40 00000000`00000000 ntdll!RtlUserThreadStart+0x1d 8 Id: 1758.36f0 Suspend: 1 Teb: 000007ff`fffa8000 Unfrozen Child-SP RetAddr Call Site 00000000`0836f8b8 00000000`774b96e4 ntdll!ZwWaitForWorkViaWorkerFactory+0xa 00000000`0836f8c0 00000000`771b59cd ntdll!DbgUiRemoteBreakin+0x354 00000000`0836fb50 00000000`7741385d kernel32!BaseThreadInitThunk+0xd 00000000`0836fb80 00000000`00000000 ntdll!RtlUserThreadStart+0x1d 9 Id: 1758.3038 Suspend: 1 Teb: 000007ff`fffa6000 Unfrozen Child-SP RetAddr Call Site 00000000`0854f698 00000000`774b96e4 ntdll!ZwWaitForWorkViaWorkerFactory+0xa 00000000`0854f6a0 00000000`771b59cd ntdll!DbgUiRemoteBreakin+0x354 00000000`0854f930 00000000`7741385d kernel32!BaseThreadInitThunk+0xd 00000000`0854f960 00000000`00000000 ntdll!RtlUserThreadStart+0x1d 10 Id: 1758.1f80 Suspend: 1 Teb: 000007ff`fffa4000 Unfrozen Child-SP RetAddr Call Site 00000000`086ffa78 000007fe`fd101203 ntdll!NtDelayExecution+0xa *** ERROR: Symbol file could not be found. Defaulted to export symbols for C:\Windows\system32\ole32.dll - 00000000`086ffa80 000007fe`fe17f558 KERNELBASE!SleepEx+0xb3 00000000`086ffb20 000007fe`fe18366e ole32!ObjectStublessClient24+0x1a48 00000000`086ffb50 000007fe`fe17f50a ole32!CoGetTreatAsClass+0xf32 00000000`086ffb90 00000000`771b59cd ole32!ObjectStublessClient24+0x19fa 00000000`086ffbc0 00000000`7741385d kernel32!BaseThreadInitThunk+0xd 00000000`086ffbf0 00000000`00000000 ntdll!RtlUserThreadStart+0x1d 11 Id: 1758.30e8 Suspend: 1 Teb: 000007ff`fffa2000 Unfrozen Child-SP RetAddr Call Site 00000000`0a06f8d8 000007fe`fad6a8af ntdll!NtWaitForMultipleObjects+0xa 00000000`0a06f8e0 00000000`771b59cd WINMM!timeEndPeriod+0x147 00000000`0a06fa30 00000000`7741385d kernel32!BaseThreadInitThunk+0xd 00000000`0a06fa60 00000000`00000000 ntdll!RtlUserThreadStart+0x1d 12 Id: 1758.4c8 Suspend: 1 Teb: 000007ff`fffa0000 Unfrozen Child-SP RetAddr Call Site 00000000`0a28f928 000007fe`fd101430 ntdll!NtWaitForMultipleObjects+0xa 00000000`0a28f930 00000000`771b06c0 KERNELBASE!GetCurrentProcess+0x40 00000000`0a28fa30 000007fe`bfcdd3f7 kernel32!WaitForMultipleObjects+0xb0 00000000`0a28fac0 000007fe`bfba973d Qt5Core!QXmlStreamStringRef::~QXmlStreamStringRef+0x3f67 00000000`0a28fc00 00000000`771b59cd Qt5Core!QThread::start+0x39d 00000000`0a28fc40 00000000`7741385d kernel32!BaseThreadInitThunk+0xd 00000000`0a28fc70 00000000`00000000 ntdll!RtlUserThreadStart+0x1d 13 Id: 1758.2df4 Suspend: 1 Teb: 000007ff`fff9e000 Unfrozen Child-SP RetAddr Call Site 00000000`0a59f7f8 000007fe`fd1010ac ntdll!ZwWaitForSingleObject+0xa 00000000`0a59f800 000007fe`bfbaa1bb KERNELBASE!WaitForSingleObjectEx+0x9c 00000000`0a59f8a0 000007fe`bfba10f4 Qt5Core!QWaitCondition::wait+0x9b 00000000`0a59f8f0 000007fe`bfba973d Qt5Core!QThreadPoolPrivate::reset+0x444 00000000`0a59f980 00000000`771b59cd Qt5Core!QThread::start+0x39d 00000000`0a59f9c0 00000000`7741385d kernel32!BaseThreadInitThunk+0xd 00000000`0a59f9f0 00000000`00000000 ntdll!RtlUserThreadStart+0x1d 14 Id: 1758.2988 Suspend: 1 Teb: 000007ff`fff9c000 Unfrozen Child-SP RetAddr Call Site 00000000`0a38f5b8 00000000`774b96e4 ntdll!ZwWaitForWorkViaWorkerFactory+0xa 00000000`0a38f5c0 00000000`771b59cd ntdll!DbgUiRemoteBreakin+0x354 00000000`0a38f850 00000000`7741385d kernel32!BaseThreadInitThunk+0xd 00000000`0a38f880 00000000`00000000 ntdll!RtlUserThreadStart+0x1d 15 Id: 1758.360 Suspend: 1 Teb: 000007ff`fff9a000 Unfrozen Child-SP RetAddr Call Site 00000000`0ca1f4e8 000007fe`fd1010ac ntdll!ZwWaitForSingleObject+0xa 00000000`0ca1f4f0 000007fe`bfbaa1bb KERNELBASE!WaitForSingleObjectEx+0x9c *** WARNING: Unable to verify checksum for F:\Projects\qt-creator\build-qtc\bin\plugins\platforms\qwindows.dll *** ERROR: Symbol file could not be found. Defaulted to export symbols for F:\Projects\qt-creator\build-qtc\bin\plugins\platforms\qwindows.dll - 00000000`0ca1f590 000007fe`a7979e05 Qt5Core!QWaitCondition::wait+0x9b 00000000`0ca1f5e0 000007fe`bfba973d qwindows+0x29e05 00000000`0ca1f910 00000000`771b59cd Qt5Core!QThread::start+0x39d 00000000`0ca1f950 00000000`7741385d kernel32!BaseThreadInitThunk+0xd 00000000`0ca1f980 00000000`00000000 ntdll!RtlUserThreadStart+0x1d 16 Id: 1758.204c Suspend: 1 Teb: 000007ff`fff98000 Unfrozen Child-SP RetAddr Call Site 00000000`0c8fc160 00000000`77484827 ntdll!RtlEnterCriticalSection+0xe5 00000000`0c8fc190 00000000`77445972 ntdll!RtlLogStackBackTrace+0x24a7 *** ERROR: Symbol file could not be found. Defaulted to export symbols for C:\Windows\system32\ucrtbase.DLL - 00000000`0c8fc1f0 000007fe`e4a3d7bb ntdll!longjmp+0x18c52 *** WARNING: Unable to verify checksum for F:\Projects\qt-creator\build-qtc\lib\qtcreator\plugins\Todo4.dll 00000000`0c8fc530 000007fe`a7fffdc0 ucrtbase!free_base+0x1b 00000000`0c8fc560 000007fe`a7fffb42 Todo4!Todo::Internal::CppTodoItemsScanner::processDocument(class QSharedPointer<CPlusPlus::Document> * doc = 0x00000000`0c8fc660)+0x230 [f:\projects\qt-creator\qt-creator\src\plugins\todo\cpptodoitemsscanner.cpp @ 112] 00000000`0c8fc630 000007fe`a8000cb3 Todo4!Todo::Internal::CppTodoItemsScanner::documentUpdated(class QSharedPointer<CPlusPlus::Document> * doc = 0x00000000`0c8fc6e0)+0x162 [f:\projects\qt-creator\qt-creator\src\plugins\todo\cpptodoitemsscanner.cpp @ 72] 00000000`0c8fc6c0 000007fe`bfd4e0e1 Todo4!QtPrivate::QSlotObject<void (int which = 118410272, class QtPrivate::QSlotObjectBase * this_ = 0x000007fe`00000004, class QObject * r = 0x00000000`211c6900, void ** a = 0x00000000`0c8fc848, bool * ret = 0x00000000`00000000)+0x63 [c:\qt\qt5.11.2\5.11.2\msvc2015_64\include\qtcore\qobjectdefs_impl.h @ 403] *** WARNING: Unable to verify checksum for F:\Projects\qt-creator\build-qtc\lib\qtcreator\plugins\CppTools4.dll 00000000`0c8fc700 000007fe`a608b831 Qt5Core!QMetaObject::activate+0x4a1 00000000`0c8fc820 000007fe`a604681d CppTools4!CppTools::CppModelManager::documentUpdated(class QSharedPointer<CPlusPlus::Document> * _t1 = 0x00000000`0c8fc8a8)+0x41 [f:\projects\qt-creator\build-qtc\src\plugins\cpptools\release\moc_cppmodelmanager.cpp @ 273] 00000000`0c8fc870 000007fe`a5fc2e1b CppTools4!CppTools::CppModelManager::emitDocumentUpdated(class QSharedPointer<CPlusPlus::Document> * doc = 0x00000000`0c8fc8f8)+0x7d [f:\projects\qt-creator\qt-creator\src\plugins\cpptools\cppmodelmanager.cpp @ 1196] 00000000`0c8fc8d0 000007fe`a605c10f CppTools4!<lambda_ae39d2d328af88b38a006b76b74a039e>::operator()(class QSharedPointer<CPlusPlus::Document> * doc = 0x00000000`2148d480)+0xfb [f:\projects\qt-creator\qt-creator\src\plugins\cpptools\builtineditordocumentparser.cpp @ 191] *** WARNING: Unable to verify checksum for F:\Projects\qt-creator\build-qtc\bin\CPlusPlus4.dll 00000000`0c8fc940 000007fe`a5e90e52 CppTools4!CppTools::Internal::CppSourceProcessor::sourceNeeded(unsigned int line = 6, class QString * fileName = 0x00000000`0c8ff630, CPlusPlus::Client::IncludeType type = IncludeLocal (0), class QStringList * initialIncludes = 0x00000000`0c8fcc78)+0x7ef [f:\projects\qt-creator\qt-creator\src\plugins\cpptools\cppsourceprocessor.cpp @ 504] 00000000`0c8fcbc0 000007fe`a5e91580 CPlusPlus4!CPlusPlus::Preprocessor::handleIncludeDirective(class CPlusPlus::Internal::PPToken * tk = 0x00000000`0bc01274, bool includeNext = true)+0x1d2 [f:\projects\qt-creator\qt-creator\src\libs\cplusplus\pp-engine.cpp @ 1683] 00000000`0c8fcc60 000007fe`a5e92025 CPlusPlus4!CPlusPlus::Preprocessor::handlePreprocessorDirective(class CPlusPlus::Internal::PPToken * tk = 0x00000000`0c8fcd98)+0x6a0 [f:\projects\qt-creator\qt-creator\src\libs\cplusplus\pp-engine.cpp @ 1629] 00000000`0c8fcce0 000007fe`a5e927ad CPlusPlus4!CPlusPlus::Preprocessor::lex(class CPlusPlus::Internal::PPToken * tk = 0x00000000`0c8ff630)+0x175 [f:\projects\qt-creator\qt-creator\src\libs\cplusplus\pp-engine.cpp @ 879] 00000000`0c8fcd60 000007fe`a5e941e0 CPlusPlus4!CPlusPlus::Preprocessor::preprocess(class QString * fileName = 0x00000000`0c8fd100, class QByteArray * source = 0x00000000`0c8fd0b0, class QByteArray * result = 0x00000000`21da1c30, class QByteArray * includeGuardMacroName = 0x00000000`0c8fd080, bool noLines = false, bool markGeneratedTokens = true, bool inCondition = false, unsigned int bytesOffsetRef = 0, unsigned int utf16charOffsetRef = 0, unsigned int lineRef = 1)+0x2dd [f:\projects\qt-creator\qt-creator\src\libs\cplusplus\pp-engine.cpp @ 1426] 00000000`0c8fcff0 000007fe`a605be66 CPlusPlus4!CPlusPlus::Preprocessor::run(class QString * fileName = 0x000007fe`bfe3d188, class QByteArray * source = 0x00000000`00000000, bool noLines = false, bool markGeneratedTokens = true)+0xc0 [f:\projects\qt-creator\qt-creator\src\libs\cplusplus\pp-engine.cpp @ 761] 00000000`0c8fd080 000007fe`a5e90e52 CppTools4!CppTools::Internal::CppSourceProcessor::sourceNeeded(unsigned int line = 0x7d, class QString * fileName = 0x00000000`0c8ff630, CPlusPlus::Client::IncludeType type = IncludeLocal (0), class QStringList * initialIncludes = 0x00000000`0c8fd3b8)+0x546 [f:\projects\qt-creator\qt-creator\src\plugins\cpptools\cppsourceprocessor.cpp @ 480] 00000000`0c8fd300 000007fe`a5e91580 CPlusPlus4!CPlusPlus::Preprocessor::handleIncludeDirective(class CPlusPlus::Internal::PPToken * tk = 0x00000000`0bc01274, bool includeNext = true)+0x1d2 [f:\projects\qt-creator\qt-creator\src\libs\cplusplus\pp-engine.cpp @ 1683] 00000000`0c8fd3a0 000007fe`a5e92025 CPlusPlus4!CPlusPlus::Preprocessor::handlePreprocessorDirective(class CPlusPlus::Internal::PPToken * tk = 0x00000000`0c8fd4d8)+0x6a0 [f:\projects\qt-creator\qt-creator\src\libs\cplusplus\pp-engine.cpp @ 1629] 18 Id: 1758.1fa8 Suspend: 1 Teb: 000007ff`fff94000 Unfrozen Child-SP RetAddr Call Site 00000000`0cb5a630 00000000`77493b7f ntdll!RtlCompareMemoryUlong+0x17 00000000`0cb5a640 00000000`773e7b9c ntdll!EtwEventWriteStartScenario+0x304f 00000000`0cb5a820 00000000`7749233d ntdll!RtlAllocateHeap+0x16c 00000000`0cb5a930 00000000`77493014 ntdll!EtwEventWriteStartScenario+0x180d 00000000`0cb5a990 00000000`773e7b9c ntdll!EtwEventWriteStartScenario+0x24e4 00000000`0cb5ab70 000007fe`e4a405d6 ntdll!RtlAllocateHeap+0x16c 00000000`0cb5ac80 000007fe`bfbaa509 ucrtbase!malloc_base+0x36 00000000`0cb5acb0 000007fe`a5e93ee4 Qt5Core!QArrayData::allocate+0xa9 00000000`0cb5ad00 000007fe`a5e8ebb5 CPlusPlus4!QVector<CPlusPlus::Internal::PPToken>::reallocData(int asize = -1075601272, int aalloc = 228687296, class QFlags<enum QArrayData::AllocationOption> options = class QFlags<enum QArrayData::AllocationOption>)+0xd4 [c:\qt\qt5.11.2\5.11.2\msvc2015_64\include\qtcore\qvector.h @ 562] 00000000`0cb5ad70 000007fe`a5e902b6 CPlusPlus4!CPlusPlus::Preprocessor::handleFunctionLikeMacro(class CPlusPlus::Macro * macro = 0x00000000`2045abf0, class QVector<CPlusPlus::Internal::PPToken> * body = 0x00000000`0cb5af60, class QVector<QVector<CPlusPlus::Internal::PPToken> > * actuals = 0x00000000`0cb5af70, unsigned int baseLine = 0x1d)+0x75 [f:\projects\qt-creator\qt-creator\src\libs\cplusplus\pp-engine.cpp @ 1144] 00000000`0cb5af20 000007fe`a5e9225d CPlusPlus4!CPlusPlus::Preprocessor::handleIdentifier(class CPlusPlus::Internal::PPToken * tk = 0x00000000`0cb5b300)+0xc16 [f:\projects\qt-creator\qt-creator\src\libs\cplusplus\pp-engine.cpp @ 1065] 00000000`0cb5b1f0 000007fe`a5e8c73b CPlusPlus4!CPlusPlus::Preprocessor::lex(class CPlusPlus::Internal::PPToken * tk = 0x00000000`00000000)+0x3ad [f:\projects\qt-creator\qt-creator\src\libs\cplusplus\pp-engine.cpp @ 892] 00000000`0cb5b270 000007fe`a5e8fe8f CPlusPlus4!CPlusPlus::Preprocessor::collectActualArguments(class CPlusPlus::Internal::PPToken * tk = 0x00000000`21ff0d50, class QVector<QVector<CPlusPlus::Internal::PPToken> > * actuals = 0x00000000`0cb5b3f0)+0x1fb [f:\projects\qt-creator\qt-creator\src\libs\cplusplus\pp-engine.cpp @ 1538] 00000000`0cb5b2f0 000007fe`a5e9225d CPlusPlus4!CPlusPlus::Preprocessor::handleIdentifier(class CPlusPlus::Internal::PPToken * tk = 0x00000000`00000000)+0x7ef [f:\projects\qt-creator\qt-creator\src\libs\cplusplus\pp-engine.cpp @ 994] 00000000`0cb5b5c0 000007fe`a5e8c6fe CPlusPlus4!CPlusPlus::Preprocessor::lex(class CPlusPlus::Internal::PPToken * tk = 0x00000000`00000000)+0x3ad [f:\projects\qt-creator\qt-creator\src\libs\cplusplus\pp-engine.cpp @ 892] 00000000`0cb5b640 000007fe`a5e8fe8f CPlusPlus4!CPlusPlus::Preprocessor::collectActualArguments(class CPlusPlus::Internal::PPToken * tk = 0x00000000`21ff0d50, class QVector<QVector<CPlusPlus::Internal::PPToken> > * actuals = 0x00000000`0cb5b7c0)+0x1be [f:\projects\qt-creator\qt-creator\src\libs\cplusplus\pp-engine.cpp @ 1531] 00000000`0cb5b6c0 000007fe`a5e9225d CPlusPlus4!CPlusPlus::Preprocessor::handleIdentifier(class CPlusPlus::Internal::PPToken * tk = 0x00000000`0cb5ba00)+0x7ef [f:\projects\qt-creator\qt-creator\src\libs\cplusplus\pp-engine.cpp @ 994] 00000000`0cb5b990 000007fe`a5e8c73b CPlusPlus4!CPlusPlus::Preprocessor::lex(class CPlusPlus::Internal::PPToken * tk = 0x00000000`00000000)+0x3ad [f:\projects\qt-creator\qt-creator\src\libs\cplusplus\pp-engine.cpp @ 892] 00000000`0cb5ba10 000007fe`a5e8fe8f CPlusPlus4!CPlusPlus::Preprocessor::collectActualArguments(class CPlusPlus::Internal::PPToken * tk = 0x00000000`21ff0d50, class QVector<QVector<CPlusPlus::Internal::PPToken> > * actuals = 0x00000000`0cb5bb90)+0x1fb [f:\projects\qt-creator\qt-creator\src\libs\cplusplus\pp-engine.cpp @ 1538] 00000000`0cb5ba90 000007fe`a5e9225d CPlusPlus4!CPlusPlus::Preprocessor::handleIdentifier(class CPlusPlus::Internal::PPToken * tk = 0x00000000`21ae8c00)+0x7ef [f:\projects\qt-creator\qt-creator\src\libs\cplusplus\pp-engine.cpp @ 994
Attachments
Issue Links
- is duplicated by
-
QTCREATORBUG-21513 Crash while typing C++ code
-
- Closed
-
-
QTCREATORBUG-21492 Qt Creator crashes when pressing enter and last line is not visible
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-21471 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
245764,3 | TextEditor: fix crash on setting text cursor | 4.8 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |