TextEditor: fix crash on setting text cursor

Setting a text cursor with a currently open edit block results in
crashes.

Fixes: QTCREATORBUG-21471
Change-Id: I267cdaf10b20959654c2923e5dcc0a07793f3094
Reviewed-by: Christian Stenger <christian.stenger@qt.io>